--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
     "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
