--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "pdfjs-dist": "^3.4.120",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-markdown": "^10.1.0",
+    "react-markdown": "^8.0.7",
     "react-scripts": "5.0.1",
     "rehype-highlight": "^7.0.2",
-    "remark-gfm": "^4.0.1",
+    "remark-gfm": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
