--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-markdown": "^8.0.7",
     "react-scripts": "5.0.1",
     "rehype-highlight": "^7.0.2",
-    "remark-gfm": "^3.0.1",
+    "remark-gfm": "3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
