--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "electron-store": "^10.0.1",
     "highlight.js": "^11.9.0",
     "pdfjs-dist": "3.4.120",
     "react": "^18.2.0",
